checking if swapping enabled

--- a/sys161.conf
+++ b/sys161.conf
@@ -139,10 +139,10 @@
 # default disk size.
 #
 # Create the disk images with:
-#    disk161 create LHD0.img 5M
+     disk161 create LHD0.img 32M
 #    disk161 create LHD1.img 5M
 #
-2	disk	rpm=7200	size=5M 	file=LHD0.img   nodoom
+2	disk	rpm=7200	size=32M 	file=LHD0.img   nodoom
 #3	disk	rpm=7200	size=5M 	file=LHD1.img
 
 28	random	autoseed
